Updated download path in ODT notebook

--- a/object-detection/codelab2/python/Train_a_salad_detector_with_TFLite_Model_Maker.ipynb
+++ b/object-detection/codelab2/python/Train_a_salad_detector_with_TFLite_Model_Maker.ipynb
@@ -43,7 +43,7 @@
         "# See the License for the specific language governing permissions and\n",
         "# limitations under the License."
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -63,16 +63,13 @@
       "source": [
         "<table class=\"tfo-notebook-buttons\" align=\"left\">\n",
         "  <td>\n",
-        "    <a target=\"_blank\" href=\"https://www.tensorflow.org/lite/tutorials/model_maker_object_detection\"><img src=\"https://www.tensorflow.org/images/tf_logo_32px.png\" />View on TensorFlow.org</a>\n",
+        "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/googlecodelabs/odml-pathways/blob/main/object-detection/codelab2/python/Train_a_salad_detector_with_TFLite_Model_Maker.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
         "  </td>\n",
         "  <td>\n",
-        "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/tensorflow/tensorflow/blob/master/tensorflow/lite/g3doc/tutorials/model_maker_object_detection.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
+        "    <a target=\"_blank\" href=\"https://github.com/googlecodelabs/odml-pathways/blob/main/object-detection/codelab2/python/Train_a_salad_detector_with_TFLite_Model_Maker.ipynb\"><img src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\" />View source on GitHub</a>\n",
         "  </td>\n",
         "  <td>\n",
-        "    <a target=\"_blank\" href=\"https://github.com/tensorflow/tensorflow/blob/master/tensorflow/lite/g3doc/tutorials/model_maker_object_detection.ipynb\"><img src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\" />View source on GitHub</a>\n",
-        "  </td>\n",
-        "  <td>\n",
-        "    <a href=\"https://storage.googleapis.com/tensorflow_docs/tensorflow/tensorflow/lite/g3doc/tutorials/model_maker_object_detection.ipynb\"><img src=\"https://www.tensorflow.org/images/download_logo_32px.png\" />Download notebook</a>\n",
+        "    <a href=\"https://raw.githubusercontent.com/googlecodelabs/odml-pathways/main/object-detection/codelab2/python/Train_a_salad_detector_with_TFLite_Model_Maker.ipynb\"><img src=\"https://www.tensorflow.org/images/download_logo_32px.png\" />Download notebook</a>\n",
         "  </td>\n",
         "</table>"
       ]
@@ -141,7 +138,7 @@
         "!pip install -q tflite-model-maker-nightly\n",
         "!pip install -q pycocotools"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -201,7 +198,7 @@
         "from absl import logging\n",
         "logging.set_verbosity(logging.ERROR)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -291,7 +288,7 @@
       "source": [
         "spec = model_spec.get('efficientdet_lite2')"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -319,7 +316,7 @@
       "source": [
         "train_data, validation_data, test_data = ObjectDetectorDataloader.from_csv('gs://cloud-ml-data/img/openimage/csv/salads_ml_use.csv')"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -347,7 +344,7 @@
       "source": [
         "model = object_detector.create(train_data, model_spec=spec, batch_size=8, train_whole_model=True, validation_data=validation_data)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -862,7 +859,7 @@
       "source": [
         "model.evaluate(test_data)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -945,7 +942,7 @@
       "source": [
         "model.export(export_dir='.', export_format=[ExportFormat.LABEL, ExportFormat.TFLITE])"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -976,7 +973,7 @@
       "source": [
         "model.evaluate_tflite('model.tflite', test_data)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1181,7 +1178,7 @@
         "  original_uint8 = original_image_np.astype(np.uint8)\n",
         "  return original_uint8"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1222,7 +1219,7 @@
         "# Show the detection result\n",
         "Image.fromarray(detection_result_image)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1247,7 +1244,7 @@
       "source": [
         ""
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     }
   ]
