update doc and fix typos

--- a/object-detection/codelab2/python/Train_a_salad_detector_with_TFLite_Model_Maker.ipynb
+++ b/object-detection/codelab2/python/Train_a_salad_detector_with_TFLite_Model_Maker.ipynb
@@ -80,7 +80,7 @@
         "id": "sr3q-gvm3cI8"
       },
       "source": [
-        "In this colab notebook, you'll learn how to use the [TensorFlow Lite Model Maker]() library to train a custom object detection model capable of detecting salads within images on a mobile device. \n",
+        "In this colab notebook, you'll learn how to use the [TensorFlow Lite Model Maker](https://www.tensorflow.org/lite/guide/model_maker) library to train a custom object detection model capable of detecting salads within images on a mobile device. \n",
         "\n",
         "The Model Maker library uses *transfer learning* to simplify the process of training a TensorFlow Lite model using a custom dataset. Retraining a TensorFlow Lite model with your own custom dataset reduces the amount of training data required and will shorten the training time.\n",
         "\n",
@@ -254,7 +254,7 @@
         "id": "xushUyZXqP59"
       },
       "source": [
-        "There are five steps to training an object detection model:\n",
+        "There are six steps to training an object detection model:\n",
         "\n",
         "**Step 1. Choose an object detection model archiecture.**\n",
         "\n",
@@ -268,7 +268,7 @@
         "| EfficientDet-Lite1 | 5.8       | 49            | 30.55%               |\n",
         "| EfficientDet-Lite2 | 7.2       | 69            | 33.97%               |\n",
         "| EfficientDet-Lite3 | 11.4      | 116           | 37.70%               |\n",
-        "| EfficientDet-Lite4 | 19.5      | 158           | 39.05%               |\n",
+        "| EfficientDet-Lite4 | 19.9      | 260           | 41.96%               |\n",
         "\n",
         "<i> * Size of the integer quantized models. <br/>\n",
         "** Latency measured on Pixel 4 using 4 threads on CPU. <br/>\n",
@@ -480,7 +480,7 @@
         {
           "output_type": "stream",
           "text": [
-            "\r0/1 [..............................] - ETA: 0s\n"
+            "\r1/1 [==============================] - 13s 13s/step\n"
           ],
           "name": "stdout"
         },
@@ -515,12 +515,23 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CgCDMe0e6jlT"
+      },
+      "source": [
+        "**Step 5.  Export as a TensorFlow Lite model.**\n",
+        "\n",
+        "Export the trained object detection model to the TensorFlow Lite format by specifying which folder you want to export the quantized model to. The default post-training quantization technique is full integer quantization."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "Hm_UULdW7A9T"
       },
       "source": [
-        "model.export(export_dir='.', export_format=[ExportFormat.LABEL, ExportFormat.TFLITE])"
+        "model.export(export_dir='.')"
       ],
       "execution_count": 8,
       "outputs": []
@@ -558,7 +569,7 @@
         {
           "output_type": "stream",
           "text": [
-            "24/25 [===========================>..] - ETA: 7s "
+            "25/25 [==============================] - 208s 8s/step\n"
           ],
           "name": "stdout"
         },
@@ -632,11 +643,12 @@
         "from PIL import Image\n",
         "\n",
         "model_path = 'model.tflite'\n",
-        "label_map_path = 'labels.txt'\n",
         "\n",
         "# Load the labels into a list\n",
-        "with open(label_map_path, 'r') as f:\n",
-        "  classes = f.read().splitlines()\n",
+        "classes = ['???'] * model.model_spec.config.num_classes\n",
+        "label_map = model.model_spec.config.label_map\n",
+        "for label_id, label_name in label_map.as_dict().items():\n",
+        "  classes[label_id-1] = label_name\n",
         "\n",
         "# Define a list of colors for visualization\n",
         "COLORS = np.random.randint(0, 255, size=(len(classes), 3), dtype=np.uint8)\n",
@@ -788,17 +800,6 @@
           "execution_count": 11
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ffSdt3EclQwH"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 11,
-      "outputs": []
     }
   ]
 }
