--- a/TextClassificationOnMobile/colabs/SpamCommentsModelMaker.ipynb
+++ b/TextClassificationOnMobile/colabs/SpamCommentsModelMaker.ipynb
@@ -40,7 +40,7 @@
         "from tflite_model_maker import ExportFormat\n",
         "from tflite_model_maker import model_spec\n",
         "from tflite_model_maker import text_classifier\n",
-        "from tflite_model_maker import TextClassifierDataLoader\n",
+        "from tflite_model_maker.text_classifier import DataLoader\n",
         "\n",
         "import tensorflow as tf\n",
         "assert tf.__version__.startswith('2')\n",
@@ -86,7 +86,7 @@
       },
       "source": [
         "# Load the CSV using DataLoader.from_csv to make the training_data\n",
-        "data = TextClassifierDataLoader.from_csv(\n",
+        "data = DataLoader.from_csv(\n",
         "      filename=data_file,\n",
         "      text_column='commenttext', \n",
         "      label_column='spam', \n",
