--- a/ImageClassificationMobile/colab/CustomImageClassifierModel.ipynb
+++ b/ImageClassificationMobile/colab/CustomImageClassifierModel.ipynb
@@ -42,7 +42,7 @@
         "from tflite_model_maker import ExportFormat\n",
         "from tflite_model_maker import model_spec\n",
         "from tflite_model_maker import image_classifier\n",
-        "from tflite_model_maker import ImageClassifierDataLoader\n",
+        "from tflite_model_maker.image_classifier import DataLoader\n",
         "\n",
         "import tensorflow as tf\n",
         "assert tf.__version__.startswith('2')\n",
@@ -71,7 +71,7 @@
         "id": "VJjNwiEkIgfh"
       },
       "source": [
-        "data = ImageClassifierDataLoader.from_folder(data_path)\n",
+        "data = DataLoader.from_folder(data_path)\n",
         "train_data, test_data = data.split(0.9)"
       ],
       "execution_count": null,
