--- a/audio_classification/colab/model_maker_audio_colab.ipynb
+++ b/audio_classification/colab/model_maker_audio_colab.ipynb
@@ -24,7 +24,7 @@
         "id": "3XX46cTrh6iD"
       },
       "source": [
-        "Copyright 2021 The TensorFlow Hub Authors.\n",
+        "Copyright 2021 The TensorFlow Authors.\n",
         "Licensed under the Apache License, Version 2.0 (the \"License\");"
       ]
     },
@@ -34,7 +34,7 @@
         "id": "sKrlWr6Kh-mF"
       },
       "source": [
-        "# Copyright 2021 The TensorFlow Hub Authors. All Rights Reserved.\n",
+        "# Copyright 2021 The TensorFlow Authors. All Rights Reserved.\n",
         "#\n",
         "# Licensed under the Apache License, Version 2.0 (the \"License\");\n",
         "# you may not use this file except in compliance with the License.\n",
